Revamp styling to landing page

--- a/src/style.css
+++ b/src/style.css
@@ -1,33 +1,25 @@
 body {
-  background-color: #7ab6f5;
-  font-family: "Roboto", sans-serif;
+  background-color: #e8f1f5;
+  font-family: "Arial", sans-serif;
+}
+#gameName {
+  font-size: 40px;
+  margin: 0;
+  padding: 0;
 }
 #app {
-  display: grid;
-  grid-template-rows: 1fr 2fr 1fr;
-  padding: 20px;
-  border-radius: 5px;
-  margin: 10px auto;
-  width: 75%;
+  color: #003366;
+  margin: auto 0;
   text-align: center;
 }
 
 #toGameScreen {
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #007bff;
-  color: white;
+  border-radius: 6px;
+  font-size: 34px;
   border: none;
-  border-radius: 10px;
-  font-weight: bold;
-  text-transform: uppercase;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s, box-shadow 0.3s;
-  cursor: pointer;
-  margin: 10px;
-  grid-column: 2; /* If you're using a grid layout */
+  width: 150px;
+  background-color: #ffa500;
 }
 #startButton:hover {
-  background-color: #0056b3;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  cursor: ;
 }
