Added two functions, one to generate the prompt and one to display it

--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,9 @@ body {
   text-align: center;
   size: 150px;
 }
+#questionAndAnswer {
+  display: none;
+}
 footer {
   transform: translateY(75%);
 }
