--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,6 @@ button {
   font-weight: bold;
 }
 #questionAndAnswer {
-  display: flex;
   text-align: center;
 }
 
@@ -85,7 +84,6 @@ button {
 }
 
 #score {
-  text-align: right;
   font-size: 50px;
 }
 
@@ -96,4 +94,10 @@ label {
   margin: 3px;
   padding: 5px;
   font-weight: bold;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
